@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Fri Apr 30 18:27:29 CEST 2010 - werner@suse.de
+
+- Add the option of recursive enabling all required services
+
+-------------------------------------------------------------------
 Wed Apr 28 15:29:23 CEST 2010 - werner@suse.de
 
 - Use savannah as primary site
